--- a/requirements.txt
+++ b/requirements.txt
@@ -6,22 +6,8 @@ matplotlib==3.7.1
 matplotlib-inline==0.1.7
 matplotlib-venn==0.11.10
 numba==0.58.1
-numpy==1.25.2
-nvidia-cublas-cu12==12.1.3.1
-nvidia-cuda-cupti-cu12==12.1.105
-nvidia-cuda-nvrtc-cu12==12.1.105
-nvidia-cuda-runtime-cu12==12.1.105
-nvidia-cudnn-cu12==8.9.2.26
-nvidia-cufft-cu12==11.0.2.54
-nvidia-curand-cu12==10.3.2.106
-nvidia-cusolver-cu12==11.4.5.107
-nvidia-cusparse-cu12==12.1.0.106
-nvidia-nccl-cu12==2.19.3
-nvidia-nvjitlink-cu12==12.4.127
-nvidia-nvtx-cu12==12.1.105
-opencv-contrib-python==4.8.0.76
+numpy
 opencv-python==4.8.0.76
-opencv-python-headless==4.9.0.80
 openpyxl==3.1.2
 pandas==2.0.3
 pandas-datareader==0.10.0
@@ -31,18 +17,14 @@ pandocfilters==1.5.1
 Pillow==9.4.0
 python-dateutil==2.8.2
 safetensors==0.4.3
-scikit-image==0.19.3
 scikit-learn==1.2.2
-scipy==1.11.4
+scipy
 spacy==3.7.4
 spacy-legacy==3.0.12
 spacy-loggers==1.0.5
-torch @ https://download.pytorch.org/whl/cu121/torch-2.2.1%2Bcu121-cp310-cp310-linux_x86_64.whl#sha256=1adf430f01ff649c848ac021785e18007b0714fdde68e4e65bd0c640bf3fb8e1
-torchaudio @ https://download.pytorch.org/whl/cu121/torchaudio-2.2.1%2Bcu121-cp310-cp310-linux_x86_64.whl#sha256=23f6236429e2bf676b820e8e7221a1d58aaf908bff2ba2665aa852df71a97961
 torchdata==0.7.1
 torchsummary==1.5.1
 torchtext==0.17.1
-torchvision @ https://download.pytorch.org/whl/cu121/torchvision-0.17.1%2Bcu121-cp310-cp310-linux_x86_64.whl#sha256=27af47915f6e762c1d44e58e8088d22ac97445668f9f793524032b2baf4f34bd
 tornado==6.3.3
 tqdm==4.66.2
 ultralytics==8.2.2
